# pystring

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pystr.cpp  pystr.h
cmake/: stb.cmake  utf8proc.cmake
docs/: README.md
tests/: CMakeLists.txt  pystr.cpp
